<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructionsParagraph"
        android:textSize="18sp"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/shoe_list_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goToShoeList"
        android:layout_marginTop="32dp" />

</LinearLayout>
</layout>