<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.udacity.shoestore.screens.shoes.ShoeDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/shoe_name_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/shoe_name"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/shoe_name_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@={viewModel.shoeName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoe_name_label" />

        <TextView
            android:id="@+id/shoe_company_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/shoe_company"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoe_name_edit" />

        <EditText
            android:id="@+id/shoe_company_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@={viewModel.shoeCompany}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoe_company_label" />

        <TextView
            android:id="@+id/shoe_size_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/shoe_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoe_company_edit" />

        <EditText
            android:id="@+id/shoe_size_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="@={viewModel.shoeSize}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoe_size_label" />

        <TextView
            android:id="@+id/shoe_description_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/shoe_description"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoe_size_edit" />

        <EditText
            android:id="@+id/shoe_description_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@={viewModel.shoeDescription}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoe_description_label" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/cancel"
            android:textColor="@color/design_default_color_on_secondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoe_description_edit" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoe_description_edit" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>